added lintcode ladder

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -9,8 +9,18 @@
 <body>
 
 
+<a style="font-size:30px"; href="LintCode - Coding interview questions online training system.html">Lintcode Ladder problems</a>
+
+
+
 <div class="codingSectionName"> DFS(search)
 </div>
+
+<div class="codingSubSectionName">Binary Search</div>
+<ul>
+    <li><a href="lecture/Lecture_2._Binary_Search_v3.4.pdf">Lecture</li>
+    <li><a href="solution/copyBooks.html">copy books</a> <a href="http://www.lintcode.com/en/problem/copy-books/">Q</a>  </li>
+</ul>
 
 
 <div class="codingSubSectionName">Permutation (回溯)</div>
@@ -115,7 +125,7 @@
      <li><a style="color:red"; href="solution/partitionArray.html">partition array ( template!)</a> <a href="">Q</a>  </li>
      <li><a style="color:red"; href="solution/sortColors.html">sort colors ( template!)</a> <a href="">Q</a>  </li>
      <li><a href="solution/sortColors-ii.html">sort colors ii</a> <a href="">Q</a>  </li>
-
+     <li><a href="solution/sortLettersByCase.html">sort letter by cases</a> <a href="http://www.lintcode.com/en/problem/sort-letters-by-case/">Q</a>  </li>
 
 </ul>
 
