--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -13,15 +13,9 @@
 
 
 
+
 <div class="codingSectionName"> DFS(search)
 </div>
-
-<div class="codingSubSectionName">Binary Search</div>
-<ul>
-    <li><a href="lecture/Lecture_2._Binary_Search_v3.4.pdf">Lecture</li>
-    <li><a href="solution/copyBooks.html">copy books</a> <a href="http://www.lintcode.com/en/problem/copy-books/">Q</a>  </li>
-</ul>
-
 
 <div class="codingSubSectionName">Permutation (回溯)</div>
 <ul>
@@ -75,6 +69,12 @@
 <div class="codingSectionName"> BFS + DFS</div>
 <ul>
      <li><a href="solution/wordladder-ii.html">Wordladder-ii</a> <a href="http://www.lintcode.com/en/problem/word-ladder-ii/">Q</a>  </li>
+</ul>
+
+<div class="codingSectionName">Binary Search</div>
+<ul>
+    <li><a href="lecture/Lecture_2._Binary_Search_v3.4.pdf">Lecture</li>
+    <li><a href="solution/copyBooks.html">copy books</a> <a href="http://www.lintcode.com/en/problem/copy-books/">Q</a>  </li>
 </ul>
 
 
