added binary search problems

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -74,7 +74,18 @@
 <div class="codingSectionName">Binary Search</div>
 <ul>
     <li><a href="lecture/Lecture_2._Binary_Search_v3.4.pdf">Lecture</li>
+	<li><a style="color:green" ; href="solution/classicbinarysearch.html">Classic binary search(Template)</a> <a href="http://www.lintcode.com/en/problem/classical-binary-search/">Q</a>  </li>
+	<li><a href="solution/totalOccurrenceOfTarget.html">total Occurrences of target</a> <a href="http://www.lintcode.com/en/problem/total-occurrence-of-target/">Q</a>  </li>
+	<li><a style="color:green"; href="solution/searchInRotatedSortedArray.html">Rotated sorted Array(Search in rotated sorted Array)</a> <a href="http://www.lintcode.com/en/problem/search-in-rotated-sorted-array/">Q</a>  </li>
+	<li><a href="solution/searchInRotatedSortedArray-ii.html">Rotated sorted Array(Search in rotated sorted Array with duplicate)</a> <a href="http://www.lintcode.com/en/problem/search-in-rotated-sorted-array-ii/">Q</a>  </li>
+
+	
+	<li><a style="color:green"; href="solution/FindMinimalInrotatedArray.html">Rotated sorted Array(Find Minimum in Rotated Sorted Array)</a> <a href="http://www.lintcode.com/en/problem/find-minimum-in-rotated-sorted-array/">Q</a>  </li>
+	<li><a href="solution/FindMinimalInrotatedArray-ii.html">Rotated sorted Array(Find Minimum in Rotated Sorted Array with duplicates)</a> <a href="http://www.lintcode.com/en/problem/find-minimum-in-rotated-sorted-array-ii/">Q</a>  </li>
+
     <li><a href="solution/copyBooks.html">copy books</a> <a href="http://www.lintcode.com/en/problem/copy-books/">Q</a>  </li>
+	<li><a href="solution/SearchA2DMatrix.html">Search in 2d array </a> <a href="http://www.lintcode.com/en/problem/search-a-2d-matrix-ii/#">Q</a>  </li>
+
 </ul>
 
 
