--- a/html/linkLayout.html
+++ b/html/linkLayout.html
@@ -17,12 +17,19 @@
 <li><a href="http://revenue.stlouisco.com/ias/">St. Louis County Real Estate Information</a> </li>
 </ul>
 
-<h2>Web Development</h2>
+<h2>Web Deployment</h2>
 <ul>
 <li><a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">Host website on Github</a> </li>
 <li><a href="http://www.w3schools.com/html/html_css.asp">CSS syntax</a> </li>
 <li><a href="https://aws.amazon.com/free/">Host website on AWS</a> </li>
 </ul>
+
+
+<h2>Web Application FAQ</h2>
+<ol>
+<li><a href="http://stackoverflow.com/questions/11731377/servlet-returns-http-status-404-the-requested-resource-servlet-is-not-availa">TomCat returns 404</a></li>
+<li><a href="webApplicationFAQ/modifiedServlet.html">Change Servlet, restartTomCat, change doesn't take effect</a></li>
+</ol>
 
 <h2>Movie</h2>
 <ul>
