--- a/html/solution/BinaryTreeDivideAndConquer.html
+++ b/html/solution/BinaryTreeDivideAndConquer.html
@@ -17,6 +17,47 @@
 </h2>
 
 
+<p>  模板  </p>
+
+
+<pre><code>
+
+int helper(TreeNode root){
+
+   if ( root == null )
+   // 结束条件
+
+   
+   int left = helper(root.left);
+   int right = helper(root.right);
+   
+   
+   // 一直会走到最底层的node, where root.left == null && root.right == null. 
+   // Business logic 从这里开始写
+   
+   
+   //conquer
+   
+    
+
+
+
+
+}
+
+
+
+</code></pre>
+
+
+<ol>
+<li><a href="BinaryTreeLongestConsecutiveSequence.html">Binary tree longest consecutive sequence</a></li>
+<li><a href="subTreeWithMaxiumAverage.html">sub Tree With Maxium average(</a></li>
+
+
+</ol>
+
+
 <img src="../../img/divideandConquer.JPG" height="800px" width="800px">
 
 
