--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -92,11 +92,13 @@
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解)</li>
+	
 	<li><a style="color:green" ; href="solution/BinaryTreePathSum.html">Binary Tree Path Sum(二分树遍历模板)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-path-sum/">Q</a>  </li>
-    <li><a style="color:green" ; href="solution/identicalbinarytree.html">Identical binary tree(二分树分治模板)</a> <a href="http://www.lintcode.com/en/problem/identical-binary-tree/">Q</a>  </li>
-	<li><a style="color:green" ; href="solution/minimalDepthOfBinaryTree.html">Minimal Depth of Binary Tree(二分树分治模板)</a> <a href="http://www.lintcode.com/en/problem/minimum-depth-of-binary-tree/">Q</a>  </li>
-	<li><href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(二分树分治)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average/#">Q</a>  </li>
-
+	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-paths/">Q</a>  </li>
+	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average/#">Q</a>  </li>
+    <li><a href="solution/identicalbinarytree.html">Identical binary tree(分治)</a> <a href="http://www.lintcode.com/en/problem/identical-binary-tree/">Q</a>  </li>
+	<li><a href="solution/minimalDepthOfBinaryTree.html">Minimal Depth of Binary Tree(分治)</a> <a href="http://www.lintcode.com/en/problem/minimum-depth-of-binary-tree/">Q</a>  </li>
+	<li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
 </ul>
 
