--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -169,11 +169,15 @@
 	 <li><a href="solution/Implement3stacksbysinglearray.html">Implement three stacks by a single array</a> <a href="http://www.lintcode.com/en/problem/implement-three-stacks-by-single-array/">Q</a>  </li>
 	 <li><a href="solution/implementQueueByTwoStacks.html">Implement a queue by two stacks</a> <a href="http://www.lintcode.com/en/problem/implement-queue-by-two-stacks/">Q</a>  </li>
 	 <li><a href="solution/implementStackbyTwoQueues.html">Implement a stack by two queues</a> <a href="http://www.lintcode.com/en/problem/implement-stack-by-two-queues/">Q</a>  </li>
-
-
-
 </ul>
 
+<div class="codingSectionName">String</div>
+<ul>
+	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
+	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长只有k个不同字符的子字符串）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+	 <li><a href="solution/reverseString.html">reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+
+	 </ul>
 </body>
 
 
