--- a/html/solution/topologicalSorting.html
+++ b/html/solution/topologicalSorting.html
@@ -74,7 +74,7 @@ public class Solution {
 
 
 <div class="comment">
-1. 理解并背诵BFS在图上模板 Queue + hashSet
+1. Topological sorting :拓扑排序 ：有向图BFS:  入度 + queue  
 </div>
 
 
