--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -52,11 +52,14 @@
 <div class="codingSubSectionName">2D matrix search</div>
 <ul>
 	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
+	 	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
 </ul>
 
 <div class="codingSectionName"> BFS</div>
 <ul>
-     <li><a href="solution/topologicalSorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+     <li><a style="color:red"; href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+	 <li><a href="solution/courseschedule.html">course schedule （directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
+	 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(undirected Graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
@@ -180,6 +183,11 @@
 	 </ul>
 </body>
 
+<div class="codingSectionName">Interview</div>
+<ul>
+	 <li><a href="interview/AmazonInterview1_27_2017.txt">Amazon 1.27.2017</a> </li>
+	 </ul>
+</body>
 
 
 </html>
