--- a/html/solution/courseschedule.html
+++ b/html/solution/courseschedule.html
@@ -31,7 +31,7 @@ public class Solution {
         // Construct in-degree array           node index - > indegree
         int[] indegree = new int[numCourses];
         
-        for( int i=0; i<prerequisites.length; i++){
+        for( int i=0; i&lt;prerequisites.length; i++){
             indegree[prerequisites[i][0]]++;
             dict[prerequisites[i][1]].add(prerequisites[i][0]);
         }
@@ -39,7 +39,7 @@ public class Solution {
         
         // Find all nodes that have 0 indegree, push it into a queue
         Queue<Integer> q = new LinkedList<>();
-        for( int i=0; i<indegree.length; i++ ){
+        for( int i=0; i&lt;indegree.length; i++ ){
             if ( indegree[i] == 0){
                 q.add(i);
             }
