--- a/html/linkLayout.html
+++ b/html/linkLayout.html
@@ -33,7 +33,7 @@
 
 <h2>Movie</h2>
 <ul>
-<li><a href="https://www.dnvod.eu/Movie/Readyplay.aspx?id=bjWJTxLX7T0%3d">House of cards</a></li>
+<li><a href="https://www.dnvod.eu/Movie/detail.aspx?id=B8i8ROMbAOY%3d">House of cards</a></li>
 </ul>
 
 </body>
