--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -42,6 +42,8 @@
 </ul>
 
 <br>
+
+
 <div class="codingSubSectionName">Subset String search(无回溯）</div>
 <ul>
 	 <li><a style="color:red"; href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
@@ -49,11 +51,25 @@
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 </ul>
 
-<div class="codingSubSectionName">2D matrix search</div>
+<div class="codingSectionName"> BFS</div>
+	 <li><a style="color:red"; href="solution/BFS.html">BFS Summary</a></li>
+<br>
+
+<div class="codingSubSectionName">String BFS</div>
 <ul>
 	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
-	 	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
 </ul>
+<br>
+
+<div class="codingSubSectionName">2D BFS</div>
+<ul>
+	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
+	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
+	 <li><a href="solution/zombieinMatrix.html">Zombie in Matrix</a> <a href="http://www.lintcode.com/en/problem/zombie-in-matrix/">Q</a></li>
+     <li><a href="solution/knightShortestpath.html">Knight shortest path</a> <a href="http://www.lintcode.com/en/problem/knight-shortest-path/">Q</a></li>
+
+</ul>
+<br>
 
 <div class="codingSectionName"> BFS</div>
 <ul>
@@ -65,7 +81,7 @@
 	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
 	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
-
+     
 
 </ul>
 
