--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -26,7 +26,7 @@ public class Solution {
             return true;
         }
         
-        Queue<DirectedGraphNode> q = new LinkedList<DirectedGraphNode>();
+        Queue&lt;DirectedGraphNode> q = new LinkedList<DirectedGraphNode>();
         HashSet<DirectedGraphNode> set = new HashSet<DirectedGraphNode>();
         
         q.add(s);
