--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -14,12 +14,13 @@
 
 
 
-<div class="codingSectionName"> DFS(search)
-</div>
+<div class="codingSectionName"> DFS(search)</div>
+	 <li><a style=" color : green"; href="solution/dfs.html">DFS Summary</a></li>
+
 
 <div class="codingSubSectionName">Permutation (回溯)</div>
 <ul>
-    <li> <a style="color:red"; href="solution/permutation.html">Permutation (Template!)</a> </li>
+    <li> <a href="solution/permutation.html">Permutation (Template!)</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
     <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
 	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
@@ -29,11 +30,10 @@
 <br>
 <div class="codingSubSectionName">Subset（无回溯）</div>
 <ul>
-     <li><a style="color:red"; href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
+     <li><a href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
 	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
 	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
-	 <li><a href="solution/palindrom partition.html">Palindrom Partition</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
 	 <li><a href="solution/combinations.html">Combinations</a> <a href="http://www.lintcode.com/en/problem/combinations/">Q</a></li>
 	 <li><a href="solution/NQueens.html">NQueens</a><a href="http://www.lintcode.com/en/problem/n-queens/"> Q</a></li>
 	 <li><a href="solution/NQueens-ii.html">NQueens-ii</a><a href="http://www.lintcode.com/en/problem/n-queens-ii/"> Q</a></li>
@@ -46,13 +46,14 @@
 
 <div class="codingSubSectionName">Subset String search(无回溯）</div>
 <ul>
-	 <li><a style="color:red"; href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
+	 <li><a href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
 	 <li><a href="solution/restoreIPAdress.html">Restore IP Address</a> <a href="http://www.lintcode.com/en/problem/restore-ip-addresses/">Q</a></li>
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
+	 <li><a href="solution/wordBreakII.html">Word break II</a> <a href="http://www.lintcode.com/en/problem/word-break-ii/"> Q</a></li>
 </ul>
 
 <div class="codingSectionName"> BFS</div>
-	 <li><a style="color:red"; href="solution/BFS.html">BFS Summary</a></li>
+	 <li><a style="color:green"; href="solution/BFS.html">BFS Summary</a></li>
 <br>
 
 <div class="codingSubSectionName">String BFS</div>
@@ -67,15 +68,15 @@
 	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
 	 <li><a href="solution/zombieinMatrix.html">Zombie in Matrix</a> <a href="http://www.lintcode.com/en/problem/zombie-in-matrix/">Q</a></li>
      <li><a href="solution/knightShortestpath.html">Knight shortest path</a> <a href="http://www.lintcode.com/en/problem/knight-shortest-path/">Q</a></li>
-
+     <li><a href="solution/postOfficeII.html">Post office II</a> <a href="http://www.lintcode.com/en/problem/build-post-office-ii/">Q</a></li>
 </ul>
 <br>
 
-<div class="codingSectionName"> BFS</div>
+<div class="codingSubSectionName"> Graph BFS</div>
 <ul>
-     <li><a style="color:red"; href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+     <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule （directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
-	 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(undirected Graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
+	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(undirected Graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
@@ -85,7 +86,7 @@
 
 </ul>
 
-<div class="codingSectionName"> BFS + DFS</div>
+<div class="codingSubSectionName"> BFS + DFS</div>
 <ul>
      <li><a href="solution/wordladder-ii.html">Wordladder-ii</a> <a href="http://www.lintcode.com/en/problem/word-ladder-ii/">Q</a>  </li>
 </ul>
