--- a/html/solution/wordBreakII.html
+++ b/html/solution/wordBreakII.html
@@ -37,7 +37,7 @@ public class Solution {
             return;
         }
         
-        for( int i=pos; i<s.length(); i++ ){
+        for( int i=pos; i&lt;s.length(); i++ ){
             String temp = s.substring(pos, i+1);
             if ( !wordDict.contains(temp)){
                 continue;
