--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -196,8 +196,8 @@
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长只有k个不同字符的子字符串）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
-
-	 </ul>
+	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring</a> <a href="http://www.lintcode.com/en/problem/minimum-window-substring/">Q</a>  </li>
+</ul>
 </body>
 
 <div class="codingSectionName">Interview</div>
