--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -151,11 +151,18 @@
      <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
      <li><a href="solution/IntersectionOfTwoArrays.html">Intercection of two arrays</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
 	 <li><a href="solution/IntersectionOfTwoArrays-ii.html">Intercection of two arrays ii</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays-ii/#">Q</a>  </li>
-     <li><a style="color:red"; href="solution/2Sum.html">2Sum (template!)</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+	 <li ><a style="color:green"; href="solution/2PointerSummary.html">Two Pointers Summary(总结必读)</a></li>
+     <li><a href="solution/2Sum.html">2Sum (template!)</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/2SumClosest.html">2Sum closest </a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/3Sum.html">3Sum</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/3SumClosest.html">3Sum closest</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/4Sum.html">4Sum</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+	 <li><a href="solution/TwoSumLessthanorequalto.html">2Sum less than or equal to pairs</a> <a href="http://www.lintcode.com/en/problem/two-sum-less-than-or-equal-to-target/">Q</a>  </li>
+	 <li><a href="solution/twoSumuniquepairs.html">2sum unique pairs</a> <a href="http://www.lintcode.com/en/problem/two-sum-unique-pairs/">Q</a>  </li>
+	 <li><a href="solution/moveZeros.html">Move zeros</a> <a href="http://www.lintcode.com/en/problem/move-zeroes/">Q</a>  </li>
+	 <li><a href="solution/removedupinArray.html">Remove dups in array</a> <a href="http://www.lintcode.com/en/problem/remove-duplicate-numbers-in-array/">Q</a>  </li>
+
+
      <li><a href="solution/BestTimetoSellaStock-i.html">BestTimeSellStock-i</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/BestTimetoSellaStock-ii.html">BestTimeSellStock-ii</a> <a href="">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/MediumOfTwoSortedArray.html">Medium of two sorted array ( template!)</a> <a href="">Q</a>  </li>
@@ -192,6 +199,10 @@
 </ul>
 
 <div class="codingSectionName">String</div>
+
+<li><a style=" color : green"; href="solution/StringSummary.html">String Summary</a></li>
+
+	 
 <ul>
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长只有k个不同字符的子字符串）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
