--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -183,8 +183,11 @@
 
 <div class="codingSectionName">Data Structure</div>
 <ul>
+	 <li><a style=" color : green"; href="solution/datastructuresummary.html">Data Structure Summary</a></li>
+</ul>
+<ul>
      <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
-	 <li><a style="color:red"; href="solution/topKLargestNumbers.html">Top K largest numbers(priority queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
+	 <li><a href="solution/topKLargestNumbers.html">Top K largest numbers(priority queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
 	 <li><a style="color:green"; href="solution/LargestRectangleInHistogram.html">Largest Rectangle in Histogram(单调增栈，很难理解只能背诵）</a> <a href="http://www.lintcode.com/en/problem/largest-rectangle-in-histogram/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify<a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
