--- a/html/solution/datastructuresummary.html
+++ b/html/solution/datastructuresummary.html
@@ -1,7 +1,7 @@
-<html>
 
-<head>
-   <link rel="stylesheet" type="text/css" href="../../css/utility.css">     <!-- external css file -->
+
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <link rel="stylesheet" type="text/css" href="./datastructuresummary_files/utility.css">     <!-- external css file -->
 </head>
 
 
@@ -10,8 +10,34 @@
 Priority Queue<br><br>
 
 1. 如何初始化<br>
-PriorityQueue<T> pq = new PriorityQueue<>()  默认的情况是min priority queue   <br>
-priorityQueue<T> pq = new PriorityQueue<>(k, Collections.reverseOrder()); 这样是max priority queue<br><br>
+1.1 PriorityQueue&lt;Integer&gt; pq = new PriorityQueue&lt;&gt;()  默认的情况是 min priority queue   <br>
+1.2 priorityQueue&lt;Integer&gt; pq = new PriorityQueue&lt;&gt;(k, Collections.reverseOrder()); max priority queue<br><br> 
+
+1.3 PriorityQueue&lt;RefereceType&gt; pq = new PriorityQueue<>(k, myComparator); 里面是自定义的reference type, 这是要自己写Comparator 比较方法见下 <br><br> 
+
+
+<pre><code>
+Comparator&lt;RefereceType&gt; myComparator = new Comparator&lt;RefereceTypegt;(){     // 这里等号右边的reference type不能去掉
+
+    public int compare(RefereceType a, RefereceType b){<br>
+	    if ( a.dist &lt; b.dist){<br>
+		    return -1;<br>
+		}else if ( a.dist > b.dist){
+		    return 1;
+		}else{
+		    if ( a.p.x < b.p.x){
+			    return -1;
+			}else{
+			    return 1;
+			}
+		}
+	
+	}
+
+}
+</code></pre>
+
+
 
 2. 时间复杂度：<br>
 add/remove  O(lgn)<br>
@@ -25,13 +51,13 @@ min/max  O(1)<br><br>
 
 
 <pre><code>
-PriorityQueue<T> pq = new PriorityQueue<T>();
+PriorityQueue<t> pq = new PriorityQueue<t>();
 
 for( int i=0; i&lt;num.length; i++){
-     if ( pq.size() < k ){
+     if ( pq.size() &lt; k ){
 	     pq.add(nums[i];
 	 }else{
-	     if ( nums[i] > pq.peek()){
+	     if ( nums[i] &gt; pq.peek()){
 		     pq.remove();
 			 pq.add(nums[i];
 		 }
@@ -48,7 +74,8 @@ space : o(k);
 
  <li><a href="http://www.lintcode.com/en/problem/kth-smallest-numbers-in-unsorted-array/">Kth Smallest number in unsorted array</a></li>
  <li><a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Top K largest numbers</a></li>
-  <li><a href=" http://www.lintcode.com/en/problem/high-five/">High Five</a></li>
+ <li><a href="http://www.lintcode.com/en/problem/high-five/">High Five</a></li>
+ <li><a href="http://www.lintcode.com/en/problem/k-closest-points/">K Closest numbers</a></li>
 
 
 
@@ -61,5 +88,7 @@ space : o(k);
 
 
 
-</body>
-</html>
+
+
+
+</t></t></body></html>
