--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -211,6 +211,8 @@
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长只有k个不同字符的子字符串）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring</a> <a href="http://www.lintcode.com/en/problem/minimum-window-substring/">Q</a>  </li>
+	 <li><a href="http://www.lintcode.com/en/problem/expression-expand/">expression expand(Divide and conquer)</a> </li>
+
 </ul>
 </body>
 
