--- a/html/solution/MergeKSortedArrays.html
+++ b/html/solution/MergeKSortedArrays.html
@@ -75,7 +75,8 @@ public class Solution {
 }
 </code></pre>
 
-
+Time  O(kn) , where n is the average length of each array. 相当于全部数字过一遍
+Space ??
 
 
 
