--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -145,10 +145,10 @@
 <div class="codingSectionName">Array</div>
 <ul>
      <li><a href="lecture/Lecture_7._Array__Numbers.v3.3.pdf">Lecture</li>
-	 <li><a style="color:red"; href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="http://www.lintcode.com/en/problem/merge-two-sorted-arrays/">Q</a>  </li>
-	 <li><a style="color:red"; href="solution/MergeSort.html">Merge Sort (Template!)</a> <a href="">Q</a>  </li>
+	 <li><a href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="http://www.lintcode.com/en/problem/merge-two-sorted-arrays/">Q</a>  </li>
+	 <li><a href="solution/MergeSort.html">Merge Sort</a> <a href="">Q</a>  </li>
 	 <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
-     <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeKSortedArrays.html">Merge K Sorted Arrays</a> <a href="http://www.lintcode.com/en/problem/merge-k-sorted-arrays/#">Q</a>  </li>
      <li><a href="solution/IntersectionOfTwoArrays.html">Intercection of two arrays</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
 	 <li><a href="solution/IntersectionOfTwoArrays-ii.html">Intercection of two arrays ii</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays-ii/#">Q</a>  </li>
 	 <li ><a style="color:green"; href="solution/2PointerSummary.html">Two Pointers Summary(总结必读)</a></li>
