--- a/html/solution/classicbinarysearch.html
+++ b/html/solution/classicbinarysearch.html
@@ -49,23 +49,12 @@ Time complexity :   O( lgn )   <br>
 Space complexity :  O(1)   <br>
 
 
-Algorithm<br>
-
-1.   <br>
-
-<br>
-
-// Note <br>
 
 
-<br>
 
-
-// Java Skill
-1.          <br>
-2.          <br>
-
-</div>
+Questions:
+<li><a href="http://www.lintcode.com/en/problem/sqrtx">sqrt</a></li>
+<li><a href="http://www.lintcode.com/en/problem/sqrtx-ii">sqrt ii</a></li>
 
 
 
