--- a/html/solution/datastructuresummary.html
+++ b/html/solution/datastructuresummary.html
@@ -7,7 +7,9 @@
 
 <body>
 
+<div class="codeSectionName">
 Priority Queue<br><br>
+</div>
 
 1. 如何初始化<br>
 1.1 PriorityQueue&lt;Integer&gt; pq = new PriorityQueue&lt;&gt;()  默认的情况是 min priority queue   <br>
@@ -78,9 +80,17 @@ space : o(k);
  <li><a href="http://www.lintcode.com/en/problem/k-closest-points/">K Closest numbers</a></li>
 
 
+<div class="codeSectionName">
+<br><br>
+Trie<br>
+</div>
 
+underlying datastructure:<br>
+1. TrieNode[26];
+2. boolean isEndk
 
-
+Questions:
+<li><a href="http://www.lintcode.com/en/problem/implement-trie/">Trie</a></li>
 
 
 
