--- a/html/solution/dfs.html
+++ b/html/solution/dfs.html
@@ -48,6 +48,9 @@ String<br>
 <li><a href="restoreIPAdress.html">Restore IP Address</a> <a href="http://www.lintcode.com/en/problem/restore-ip-addresses/">Q</a></li>
 <li><a href="wordBreakII.html">Word Break II O(n*2^n) Lintcode过不了大数据</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 
+Binary Tree<br>
+<li><a href="HouseRubberIII.html">House rubber III</a> <a href="http://www.lintcode.com/en/problem/house-robber-iii/">Q</a></li>
+
 
 
 <br><br>
@@ -94,7 +97,6 @@ Integer array :<br>
      此题目较特殊： permutation模版变种<br>
      下一层可以在上一层左边。 但是每层的元素都不一样，所以不可能出现重复，所以不用hashset去重， 传层次控制符，唯一作用是走到下一层，不去重<br>
      <li><a href="http://www.lintcode.com/en/problem/letter-combinations-of-a-phone-number/">Letter Combinations of a Phone Number</a></li> 
-s
 
 </body>
 
