added binary tree serilization

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -126,6 +126,7 @@
 	<li><a href="solution/minimalDepthOfBinaryTree.html">Minimal Depth of Binary Tree(分治)</a> <a href="http://www.lintcode.com/en/problem/minimum-depth-of-binary-tree/">Q</a>  </li>
 	<li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
+    <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href="http://www.lintcode.com/en/problem/binary-tree-serialization/#">Q</a>  </li>
 </ul>
 
 <div class="codingSectionName"> Linked List</div>
