--- a/html/linkLayout.html
+++ b/html/linkLayout.html
@@ -9,6 +9,7 @@
 <h2>Stock</h2>
 <ul>
 <li><a href="http://www.nasdaq.com/markets/most-active.aspx">NASDAQ most active stock</a> </li>
+<li><a href="https://www.nasdaqtrader.com/Trader.aspx?id=DailyMarketSummary">Nasdaq Volume</a></li>
 </ul>
 
 <h2>St. Louis Local</h2>
