course schedule is topological sorting model

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -82,7 +82,7 @@
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
      <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
-	 <li><a href="solution/courseschedule.html">course schedule （directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
+	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(undirected Graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
