--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -83,7 +83,7 @@
 <ul>
      <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
-	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(undirected Graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
+	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图找环:BFS过河拆桥找重复点)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
