Added office tab

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <button id="codeButton" style=" color : #a9e0ea" onclick="goToCodingLayout();">c</button>   <!-- button -->
 <button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
+<button id="OfficeLinkButton" onclick="goToOfficeLink();">Office</button>
+
 
 
 <!--  <img src="img/cat.jpeg" alt="cat"> --!? 
