update longest substringwithatmost2distinctchars

--- a/html/solution/longestSubStrwithoutduplicate.html
+++ b/html/solution/longestSubStrwithoutduplicate.html
@@ -45,6 +45,7 @@ Solution 1:<br>
 // 数据结构 ： Map : char-> index.  Maintain start;<br>
 // 例子：abcdefge, 找到重复后start调到f, 更新start的位置。<br>
 // Trick : Start 不能往后走 ：  an++--viaj, ( 当i走到第二个a的时候，start不能回到n)<br>
+// Trick : 结束时需要在check一次长度，因为更新长度是在if里面。
 
 
 
