--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -230,6 +230,11 @@
 	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Feb 017</a> </li>
 	 <li><a href="interview/uber_4_6_2016.txt">Uber April 2017</a> </li>
 	 </ul>
+	 
+<div class="codingSectionName">Interview</div>
+<ul>
+	 <li><a href="interview/resume.doc">Resume</a> </li>
+	 </ul>
 </body>
 
 
