--- a/html/solution/MinimalWindowSubstring.html
+++ b/html/solution/MinimalWindowSubstring.html
@@ -34,7 +34,7 @@
         boolean found = false;
         
 
-        for( ; i<source.length();  i++){
+        for( ; i&lt;source.length();  i++){
             
             // As we go, we build srcDict and count qulified characters
             char c = source.charAt(i);
