--- a/html/solution/wordBreak.html
+++ b/html/solution/wordBreak.html
@@ -59,36 +59,21 @@ public class Solution {
 
 </code></pre>
 
+思路：
+可不可以 =>  DFS ->  subset 模板，可以用来切割字符串。
 
+注意：递归的结束条件可能是自然结束也可能是找到了满足条件的，所以需要check。
 
 
 
 
 <div class="comment">
-Time complexity :      <br>
-Space complexity :     <br>
-
-
-Algorithm<br>
-
-1.   <br>
+Time complexity :      n*(2^n)
+慢过不了AC,但是解法是正确的。
 
 
 
 
-<br>
-Note <br>
-
-
-<br>
-Java Skill
-1.          <br>
-2.          <br>
-
-
-
-<br>
-Last Time completed at :
 
 
 </div>
