Amazon onsite intervie 02/09/2018

--- a/html/linkLayout.html
+++ b/html/linkLayout.html
@@ -6,7 +6,7 @@
 <h1 style="text-align:center">Interview Tips</h1>
 
 <h2>How to answer behavioural Question</h2>
-<li><a href="how to answer behavioral interview questions">The big 10 behavioural Question</a> </li>
+<li><a href="https://www.youtube.com/watch?v=Csl2ccBpo4g">The big 10 behavioural Question</a> </li>
  
 
 
