isSubTree and update two templates

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -123,7 +123,9 @@
 	<li><a style="color:green" ; href="solution/BinaryTreePathSum.html">Binary Tree Path Sum(二分树遍历模板)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-path-sum/">Q</a>  </li>
 	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-paths/">Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average/#">Q</a>  </li>
-    <li><a href="solution/identicalbinarytree.html">Identical binary tree(分治)</a> <a href="http://www.lintcode.com/en/problem/identical-binary-tree/">Q</a>  </li>
+	<li><a style="color:green" ;  href="solution/isSubTree.html">isSubTree ( 点对树 + 树对数 两个分治模板结合</a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
+
+    <li><a href="solution/identicalbinarytree.html">Identical binary tree(树对树分治模板)</a> <a href="http://www.lintcode.com/en/problem/identical-binary-tree/">Q</a>  </li>
 	<li><a href="solution/minimalDepthOfBinaryTree.html">Minimal Depth of Binary Tree(分治)</a> <a href="http://www.lintcode.com/en/problem/minimum-depth-of-binary-tree/">Q</a>  </li>
 	<li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
