--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -44,7 +44,8 @@
 <br>
 
 
-<div class="codingSubSectionName">Subset search in String</div>
+
+<div class="codingSubSectionName">Subset String search</div>
 <ul>
 	 <li><a href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
 	 <li><a href="solution/restoreIPAdress.html">Restore IP Address</a> <a href="http://www.lintcode.com/en/problem/restore-ip-addresses/">Q</a></li>
@@ -53,7 +54,9 @@
 	 <li><a href="solution/wordBreakII.html">Word break II</a> <a href="http://www.lintcode.com/en/problem/word-break-ii/"> Q</a></li>
 </ul>
 
+
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
+
 <ul>
 	 <li><a href="solution/HouseRubberIII.html">House rubber III</a> <a href="http://www.lintcode.com/en/problem/house-robber-iii/">Q</a></li>
 </ul>
